k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbtcfaucet
  labels:
    app.kubernetes.io/created-by: platform-eng
    app.kubernetes.io/type: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rbtcfaucet
      app.kubernetes.io/instance: rbtcfaucet
      app.kubernetes.io/component: service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rbtcfaucet
        app.kubernetes.io/instance: rbtcfaucet
        app.kubernetes.io/component: service
        app.kubernetes.io/created-by: platform-eng
    spec:
      containers:
        - name: rbtcfaucet
          image: "666927241564.dkr.ecr.us-east-1.amazonaws.com/rbtcfaucet-dev:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
        - name: redis
          image: "redis:latest"
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-data
          emptyDir: {}
