k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rbtc-faucet-service
  namespace: rbtc-faucet-${ENVIRONMENT}
  labels:
    app: rbtc-faucet
    environment: ${ENVIRONMENT}
spec:
  selector:
    app: rbtc-faucet
    environment: ${ENVIRONMENT}
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
